--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "framer-motion": "^12.23.6",
+    "lucide-react": "^0.525.0",
     "mongodb": "^6.17.0",
     "next": "15.4.1",
     "openai": "^5.10.1",
